Wallet is initialized solution 1